<resources>
    <string name="app_name">PPB-GPS</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="update_lokasi">Update Data Lokasi</string>
    <string name="map_view">MapView</string>
    <string name="current_location">Lokasi Saat Ini</string>
    <string name="map_fragment_label">Map Fragment</string>
    <string name="lihat_lokasi">Lihat Lokasi</string>
    <string name="zoom">Zoom</string>
    <string name="nama_lokasi">Cari Lokasi</string>
    <string name="tipe_peta">Tipe Peta</string>
    <string name="alamat">Alamat</string>
    <string name="jarak">Jarak dari lokasi saat ini (KM)</string>
</resources>